maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if (compteur = 0) {
                             ^